qt/gen_qvalidator.h

typedef struct QChildEvent QChildEvent;
typedef struct QDoubleValidator QDoubleValidator;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QRegExp QRegExp;
typedef struct QRegExpValidator QRegExpValidator;
typedef struct QRegularExpression QRegularExpression;
typedef struct QRegularExpressionValidator QRegularExpressionValidator;
typedef struct QTimerEvent QTimerEvent;
void QDoubleValidator_bottomChanged(QDoubleValidator* self, double bottom);
void QDoubleValidator_connect_bottomChanged(QDoubleValidator* self, intptr_t slot);
void QDoubleValidator_topChanged(QDoubleValidator* self, double top);
void QDoubleValidator_connect_topChanged(QDoubleValidator* self, intptr_t slot);
void QDoubleValidator_decimalsChanged(QDoubleValidator* self, int decimals);
void QDoubleValidator_connect_decimalsChanged(QDoubleValidator* self, intptr_t slot);
void QDoubleValidator_notationChanged(QDoubleValidator* self, int notation);
void QDoubleValidator_connect_notationChanged(QDoubleValidator* self, intptr_t slot);
struct miqt_string QDoubleValidator_tr2(const char* s, const char* c);
struct miqt_string QDoubleValidator_tr3(const char* s, const char* c, int n);
struct miqt_string QDoubleValidator_trUtf82(const char* s, const char* c);
struct miqt_string QDoubleValidator_trUtf83(const char* s, const char* c, int n);
bool QDoubleValidator_override_virtual_metacall(void* self, intptr_t slot);
int QDoubleValidator_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QDoubleValidator_override_virtual_validate(void* self, intptr_t slot);
int QDoubleValidator_virtualbase_validate(const void* self, struct miqt_string param1, int* param2);
bool QDoubleValidator_override_virtual_setRange(void* self, intptr_t slot);
void QDoubleValidator_virtualbase_setRange(void* self, double bottom, double top, int decimals);
bool QDoubleValidator_override_virtual_fixup(void* self, intptr_t slot);
void QDoubleValidator_virtualbase_fixup(const void* self, struct miqt_string param1);
bool QDoubleValidator_override_virtual_event(void* self, intptr_t slot);
bool QDoubleValidator_virtualbase_event(void* self, QEvent* event);
bool QDoubleValidator_override_virtual_eventFilter(void* self, intptr_t slot);
bool QDoubleValidator_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QDoubleValidator_override_virtual_timerEvent(void* self, intptr_t slot);
void QDoubleValidator_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QDoubleValidator_override_virtual_childEvent(void* self, intptr_t slot);
void QDoubleValidator_virtualbase_childEvent(void* self, QChildEvent* event);
bool QDoubleValidator_override_virtual_customEvent(void* self, intptr_t slot);
void QDoubleValidator_virtualbase_customEvent(void* self, QEvent* event);
bool QDoubleValidator_override_virtual_connectNotify(void* self, intptr_t slot);
void QDoubleValidator_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QDoubleValidator_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QDoubleValidator_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QDoubleValidator_delete(QDoubleValidator* self);
QRegExpValidator* QRegExpValidator_new();
QRegExpValidator* QRegExpValidator_new2(QRegExp* rx);
QRegExpValidator* QRegExpValidator_new3(QObject* parent);
QRegExpValidator* QRegExpValidator_new4(QRegExp* rx, QObject* parent);
QMetaObject* QRegExpValidator_metaObject(const QRegExpValidator* self);
void* QRegExpValidator_metacast(QRegExpValidator* self, const char* param1);
int QRegExpValidator_metacall(QRegExpValidator* self, int param1, int param2, void** param3);
struct miqt_string QRegExpValidator_tr(const char* s);
struct miqt_string QRegExpValidator_trUtf8(const char* s);
int QRegExpValidator_validate(const QRegExpValidator* self, struct miqt_string input, int* pos);
void QRegExpValidator_setRegExp(QRegExpValidator* self, QRegExp* rx);
QRegExp* QRegExpValidator_regExp(const QRegExpValidator* self);
void QRegExpValidator_regExpChanged(QRegExpValidator* self, QRegExp* regExp);
void QRegExpValidator_connect_regExpChanged(QRegExpValidator* self, intptr_t slot);
struct miqt_string QRegExpValidator_tr2(const char* s, const char* c);
struct miqt_string QRegExpValidator_tr3(const char* s, const char* c, int n);
struct miqt_string QRegExpValidator_trUtf82(const char* s, const char* c);
struct miqt_string QRegExpValidator_trUtf83(const char* s, const char* c, int n);
bool QRegExpValidator_override_virtual_metacall(void* self, intptr_t slot);
int QRegExpValidator_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QRegExpValidator_override_virtual_validate(void* self, intptr_t slot);
int QRegExpValidator_virtualbase_validate(const void* self, struct miqt_string input, int* pos);
bool QRegExpValidator_override_virtual_fixup(void* self, intptr_t slot);
void QRegExpValidator_virtualbase_fixup(const void* self, struct miqt_string param1);
bool QRegExpValidator_override_virtual_event(void* self, intptr_t slot);
bool QRegExpValidator_virtualbase_event(void* self, QEvent* event);
bool QRegExpValidator_override_virtual_eventFilter(void* self, intptr_t slot);
bool QRegExpValidator_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QRegExpValidator_override_virtual_timerEvent(void* self, intptr_t slot);
void QRegExpValidator_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QRegExpValidator_override_virtual_childEvent(void* self, intptr_t slot);
void QRegExpValidator_virtualbase_childEvent(void* self, QChildEvent* event);
bool QRegExpValidator_override_virtual_customEvent(void* self, intptr_t slot);
void QRegExpValidator_virtualbase_customEvent(void* self, QEvent* event);
bool QRegExpValidator_override_virtual_connectNotify(void* self, intptr_t slot);
void QRegExpValidator_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QRegExpValidator_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QRegExpValidator_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QRegExpValidator_delete(QRegExpValidator* self);
QRegularExpressionValidator* QRegularExpressionValidator_new();
QRegularExpressionValidator* QRegularExpressionValidator_new2(QRegularExpression* re);
QRegularExpressionValidator* QRegularExpressionValidator_new3(QObject* parent);
QRegularExpressionValidator* QRegularExpressionValidator_new4(QRegularExpression* re, QObject* parent);
QMetaObject* QRegularExpressionValidator_metaObject(const QRegularExpressionValidator* self);
void* QRegularExpressionValidator_metacast(QRegularExpressionValidator* self, const char* param1);
int QRegularExpressionValidator_metacall(QRegularExpressionValidator* self, int param1, int param2, void** param3);
struct miqt_string QRegularExpressionValidator_tr(const char* s);
struct miqt_string QRegularExpressionValidator_trUtf8(const char* s);
int QRegularExpressionValidator_validate(const QRegularExpressionValidator* self, struct miqt_string input, int* pos);
QRegularExpression* QRegularExpressionValidator_regularExpression(const QRegularExpressionValidator* self);
void QRegularExpressionValidator_setRegularExpression(QRegularExpressionValidator* self, QRegularExpression* re);
void QRegularExpressionValidator_regularExpressionChanged(QRegularExpressionValidator* self, QRegularExpression* re);
void QRegularExpressionValidator_connect_regularExpressionChanged(QRegularExpressionValidator* self, intptr_t slot);
struct miqt_string QRegularExpressionValidator_tr2(const char* s, const char* c);
struct miqt_string QRegularExpressionValidator_tr3(const char* s, const char* c, int n);