qt/gen_qvalidator.nim

proc fcQDoubleValidator_bottomChanged(self: pointer, bottom: float64): void {.importc: "QDoubleValidator_bottomChanged".}
proc fQDoubleValidator_connect_bottomChanged(self: pointer, slot: int) {.importc: "QDoubleValidator_connect_bottomChanged".}
proc fcQDoubleValidator_topChanged(self: pointer, top: float64): void {.importc: "QDoubleValidator_topChanged".}
proc fQDoubleValidator_connect_topChanged(self: pointer, slot: int) {.importc: "QDoubleValidator_connect_topChanged".}
proc fcQDoubleValidator_decimalsChanged(self: pointer, decimals: cint): void {.importc: "QDoubleValidator_decimalsChanged".}
proc fQDoubleValidator_connect_decimalsChanged(self: pointer, slot: int) {.importc: "QDoubleValidator_connect_decimalsChanged".}
proc fcQDoubleValidator_notationChanged(self: pointer, notation: cint): void {.importc: "QDoubleValidator_notationChanged".}
proc fQDoubleValidator_connect_notationChanged(self: pointer, slot: int) {.importc: "QDoubleValidator_connect_notationChanged".}
proc fcQDoubleValidator_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QDoubleValidator_tr2".}
proc fcQDoubleValidator_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QDoubleValidator_tr3".}
proc fcQDoubleValidator_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QDoubleValidator_trUtf82".}
proc fcQDoubleValidator_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QDoubleValidator_trUtf83".}
proc fQDoubleValidator_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QDoubleValidator_virtualbase_metacall".}
proc fcQDoubleValidator_override_virtual_metacall(self: pointer, slot: int) {.importc: "QDoubleValidator_override_virtual_metacall".}
proc fQDoubleValidator_virtualbase_validate(self: pointer, param1: struct_miqt_string, param2: ptr cint): cint{.importc: "QDoubleValidator_virtualbase_validate".}
proc fcQDoubleValidator_override_virtual_validate(self: pointer, slot: int) {.importc: "QDoubleValidator_override_virtual_validate".}
proc fQDoubleValidator_virtualbase_setRange(self: pointer, bottom: float64, top: float64, decimals: cint): void{.importc: "QDoubleValidator_virtualbase_setRange".}
proc fcQDoubleValidator_override_virtual_setRange(self: pointer, slot: int) {.importc: "QDoubleValidator_override_virtual_setRange".}
proc fQDoubleValidator_virtualbase_fixup(self: pointer, param1: struct_miqt_string): void{.importc: "QDoubleValidator_virtualbase_fixup".}
proc fcQDoubleValidator_override_virtual_fixup(self: pointer, slot: int) {.importc: "QDoubleValidator_override_virtual_fixup".}
proc fQDoubleValidator_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QDoubleValidator_virtualbase_event".}
proc fcQDoubleValidator_override_virtual_event(self: pointer, slot: int) {.importc: "QDoubleValidator_override_virtual_event".}
proc fQDoubleValidator_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QDoubleValidator_virtualbase_eventFilter".}
proc fcQDoubleValidator_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QDoubleValidator_override_virtual_eventFilter".}
proc fQDoubleValidator_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QDoubleValidator_virtualbase_timerEvent".}
proc fcQDoubleValidator_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QDoubleValidator_override_virtual_timerEvent".}
proc fQDoubleValidator_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QDoubleValidator_virtualbase_childEvent".}
proc fcQDoubleValidator_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QDoubleValidator_override_virtual_childEvent".}
proc fQDoubleValidator_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QDoubleValidator_virtualbase_customEvent".}
proc fcQDoubleValidator_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QDoubleValidator_override_virtual_customEvent".}
proc fQDoubleValidator_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QDoubleValidator_virtualbase_connectNotify".}
proc fcQDoubleValidator_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QDoubleValidator_override_virtual_connectNotify".}
proc fQDoubleValidator_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QDoubleValidator_virtualbase_disconnectNotify".}
proc fcQDoubleValidator_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QDoubleValidator_override_virtual_disconnectNotify".}
proc fcQDoubleValidator_delete(self: pointer) {.importc: "QDoubleValidator_delete".}
proc fcQRegExpValidator_new(): ptr cQRegExpValidator {.importc: "QRegExpValidator_new".}
proc fcQRegExpValidator_new2(rx: pointer): ptr cQRegExpValidator {.importc: "QRegExpValidator_new2".}
proc fcQRegExpValidator_new3(parent: pointer): ptr cQRegExpValidator {.importc: "QRegExpValidator_new3".}
proc fcQRegExpValidator_new4(rx: pointer, parent: pointer): ptr cQRegExpValidator {.importc: "QRegExpValidator_new4".}
proc fcQRegExpValidator_metaObject(self: pointer, ): pointer {.importc: "QRegExpValidator_metaObject".}
proc fcQRegExpValidator_metacast(self: pointer, param1: cstring): pointer {.importc: "QRegExpValidator_metacast".}
proc fcQRegExpValidator_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QRegExpValidator_metacall".}
proc fcQRegExpValidator_tr(s: cstring): struct_miqt_string {.importc: "QRegExpValidator_tr".}
proc fcQRegExpValidator_trUtf8(s: cstring): struct_miqt_string {.importc: "QRegExpValidator_trUtf8".}
proc fcQRegExpValidator_validate(self: pointer, input: struct_miqt_string, pos: ptr cint): cint {.importc: "QRegExpValidator_validate".}
proc fcQRegExpValidator_setRegExp(self: pointer, rx: pointer): void {.importc: "QRegExpValidator_setRegExp".}
proc fcQRegExpValidator_regExp(self: pointer, ): pointer {.importc: "QRegExpValidator_regExp".}
proc fcQRegExpValidator_regExpChanged(self: pointer, regExp: pointer): void {.importc: "QRegExpValidator_regExpChanged".}
proc fQRegExpValidator_connect_regExpChanged(self: pointer, slot: int) {.importc: "QRegExpValidator_connect_regExpChanged".}
proc fcQRegExpValidator_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QRegExpValidator_tr2".}
proc fcQRegExpValidator_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QRegExpValidator_tr3".}
proc fcQRegExpValidator_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QRegExpValidator_trUtf82".}
proc fcQRegExpValidator_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QRegExpValidator_trUtf83".}
proc fQRegExpValidator_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QRegExpValidator_virtualbase_metacall".}
proc fcQRegExpValidator_override_virtual_metacall(self: pointer, slot: int) {.importc: "QRegExpValidator_override_virtual_metacall".}
proc fQRegExpValidator_virtualbase_validate(self: pointer, input: struct_miqt_string, pos: ptr cint): cint{.importc: "QRegExpValidator_virtualbase_validate".}
proc fcQRegExpValidator_override_virtual_validate(self: pointer, slot: int) {.importc: "QRegExpValidator_override_virtual_validate".}
proc fQRegExpValidator_virtualbase_fixup(self: pointer, param1: struct_miqt_string): void{.importc: "QRegExpValidator_virtualbase_fixup".}
proc fcQRegExpValidator_override_virtual_fixup(self: pointer, slot: int) {.importc: "QRegExpValidator_override_virtual_fixup".}
proc fQRegExpValidator_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QRegExpValidator_virtualbase_event".}
proc fcQRegExpValidator_override_virtual_event(self: pointer, slot: int) {.importc: "QRegExpValidator_override_virtual_event".}
proc fQRegExpValidator_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QRegExpValidator_virtualbase_eventFilter".}
proc fcQRegExpValidator_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QRegExpValidator_override_virtual_eventFilter".}
proc fQRegExpValidator_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QRegExpValidator_virtualbase_timerEvent".}
proc fcQRegExpValidator_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QRegExpValidator_override_virtual_timerEvent".}
proc fQRegExpValidator_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QRegExpValidator_virtualbase_childEvent".}
proc fcQRegExpValidator_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QRegExpValidator_override_virtual_childEvent".}
proc fQRegExpValidator_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QRegExpValidator_virtualbase_customEvent".}
proc fcQRegExpValidator_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QRegExpValidator_override_virtual_customEvent".}
proc fQRegExpValidator_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QRegExpValidator_virtualbase_connectNotify".}
proc fcQRegExpValidator_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QRegExpValidator_override_virtual_connectNotify".}
proc fQRegExpValidator_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QRegExpValidator_virtualbase_disconnectNotify".}
proc fcQRegExpValidator_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QRegExpValidator_override_virtual_disconnectNotify".}
proc fcQRegExpValidator_delete(self: pointer) {.importc: "QRegExpValidator_delete".}
proc fcQRegularExpressionValidator_new(): ptr cQRegularExpressionValidator {.importc: "QRegularExpressionValidator_new".}
proc fcQRegularExpressionValidator_new2(re: pointer): ptr cQRegularExpressionValidator {.importc: "QRegularExpressionValidator_new2".}
proc fcQRegularExpressionValidator_new3(parent: pointer): ptr cQRegularExpressionValidator {.importc: "QRegularExpressionValidator_new3".}
proc fcQRegularExpressionValidator_new4(re: pointer, parent: pointer): ptr cQRegularExpressionValidator {.importc: "QRegularExpressionValidator_new4".}
proc fcQRegularExpressionValidator_metaObject(self: pointer, ): pointer {.importc: "QRegularExpressionValidator_metaObject".}
proc fcQRegularExpressionValidator_metacast(self: pointer, param1: cstring): pointer {.importc: "QRegularExpressionValidator_metacast".}
proc fcQRegularExpressionValidator_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QRegularExpressionValidator_metacall".}
proc fcQRegularExpressionValidator_tr(s: cstring): struct_miqt_string {.importc: "QRegularExpressionValidator_tr".}
proc fcQRegularExpressionValidator_trUtf8(s: cstring): struct_miqt_string {.importc: "QRegularExpressionValidator_trUtf8".}
proc fcQRegularExpressionValidator_validate(self: pointer, input: struct_miqt_string, pos: ptr cint): cint {.importc: "QRegularExpressionValidator_validate".}
proc fcQRegularExpressionValidator_regularExpression(self: pointer, ): pointer {.importc: "QRegularExpressionValidator_regularExpression".}
proc fcQRegularExpressionValidator_setRegularExpression(self: pointer, re: pointer): void {.importc: "QRegularExpressionValidator_setRegularExpression".}
proc fcQRegularExpressionValidator_regularExpressionChanged(self: pointer, re: pointer): void {.importc: "QRegularExpressionValidator_regularExpressionChanged".}
proc fQRegularExpressionValidator_connect_regularExpressionChanged(self: pointer, slot: int) {.importc: "QRegularExpressionValidator_connect_regularExpressionChanged".}
proc fcQRegularExpressionValidator_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QRegularExpressionValidator_tr2".}
proc fcQRegularExpressionValidator_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QRegularExpressionValidator_tr3".}
